Implement typescript client, better JAX-RS client, keycloak user lookup
