# jaxrs-spec-generated/src/main/java/fi/metatavu/jouko/server/rest/KeycloakUsersApi.java
@@ -1,6 +1,9 @@
 package fi.metatavu.jouko.server.rest;
 
+import fi.metatavu.jouko.server.rest.model.InternalServerError;
 import java.util.UUID;
+import fi.metatavu.jouko.server.rest.model.Unauthorized;
+import fi.metatavu.jouko.server.rest.model.User;
 
 import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
@@ -18,7 +21,7 @@ import java.lang.Exception;
 @Api(description = "the keycloakUsers API")
 @Consumes({ "application/json;charset=utf-8" })
 @Produces({ "application/json;charset=utf-8" })
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2018-04-18T13:16:01.324Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2018-04-23T11:18:47.032Z")
 
 
 public interface KeycloakUsersApi  {
@@ -27,9 +30,12 @@ public interface KeycloakUsersApi  {
     @Path("/{keycloakId}")
     @Consumes({ "application/json;charset&#x3D;utf-8" })
     @Produces({ "application/json;charset&#x3D;utf-8" })
-    @ApiOperation(value = "Get an user by keycloak id", notes = "", response = Void.class, authorizations = {
+    @ApiOperation(value = "Get an user by keycloak id", notes = "", response = User.class, responseContainer = "List", authorizations = {
         @Authorization(value = "bearer")
     }, tags={ "Users" })
-    @ApiResponses(value = {  })
-    public Response getUserByKeycloakId(@PathParam("userId") @ApiParam("The keycloak id of the user to look up") UUID userId) throws Exception;
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = User.class, responseContainer = "List"),
+        @ApiResponse(code = 401, message = "Unauthorized", response = Unauthorized.class),
+        @ApiResponse(code = 500, message = "Internal server error", response = InternalServerError.class) })
+    public Response getUserByKeycloakId(@PathParam("keycloakId") @ApiParam("The keycloak id of the user to look up") UUID keycloakId) throws Exception;
 }
